* Fixed bash typo in 98univention-samba4-dns.inst (Bug #32871)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45411 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.28-2) unstable; urgency=low
+
+  * Fixed bash typo in 98univention-samba4-dns.inst (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Oct 2013 10:09:29 +0200
+
 univention-samba4 (3.0.28-1) unstable; urgency=low
 
   * Wait for dns- replication only if it is not ignored (Bug #32871)
