Bug #28670: USS: Fix build failure
The build environment might not have /sys/ mounted, which breaks the
build.

Add missing translation.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45422 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/js/de.po
+++ b/base/univention-system-setup/umc/js/de.po
@@ -131,6 +131,10 @@ msgstr "Zugriffseinstellungen"
 msgid "Account data"
 msgstr "Kontodaten"
 
+#: umc/js/setup/InterfaceGrid.js:92
+msgid "Add"
+msgstr "Hinzufügen"
+
 #: umc/js/setup/InterfaceGrid.js:313
 msgid "Add a network interface"
 msgstr "Ein Netzwerkgerät hinzufügen"
