--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-3) unstable; urgency=low
+
+  * Revert last change (Bug #32411)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 22 Oct 2013 12:27:58 +0200
+
 univention-ldap (10.0.17-2) unstable; urgency=low
 
   * Add replication access for UCS@school DC Slaves (Bug #32411)
