--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.51-3) unstable; urgency=low
+
+  * Fix detection of address change while keeping the same subnet (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 12:19:57 +0200
+
 univention-system-setup (7.0.51-2) unstable; urgency=low
 
   * Fix build dependencies to allow running the unit tests (Bug #28670)
