--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.116-1) unstable; urgency=low
+
+  * Bug #32168: Refactor context menu of gallery pane to avoid issues with
+    popup
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 22 Oct 2013 12:39:51 +0200
+
 univention-management-console-frontend (3.0.115-1) unstable; urgency=low
 
   * Bug #30811: s/Lizenz-Informationen/Lizenzinformationen/
