revised settings/extended_attribute descriptions again (Bug #28629)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45433 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.68-1) unstable; urgency=low
+
+  * revised settings/extended_attribute descriptions again (Bug #28629)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 13:50:10 +0200
+
 univention-directory-manager-modules (9.0.67-2) unstable; urgency=low
 
   * Added syntax UNIX_AccessRight_extended. The widget should provide
