--- a/management/univention-directory-manager-modules/modules/univention/admin/handlers/settings/de.po
+++ b/management/univention-directory-manager-modules/modules/univention/admin/handlers/settings/de.po
@@ -210,15 +210,15 @@ msgid "Settings: Extended attribute"
 msgstr "Einstellungen: Erweitertes Attribut"
 
 #: extended_attribute.py:52
-msgid "Unique Name"
+msgid "Unique name"
 msgstr "Eindeutiger Name"
 
 #: extended_attribute.py:53
 msgid ""
-"Name which by default is used by the command line programm and internally to "
+"Name which by default is used by UDM CLI and internally to "
 "identify the extended attribute"
 msgstr ""
-"Name der standardmäßig vom Kommandozeilenprogramm und intern zur "
+"Name der standardmäßig vom UDM-CLI und intern zur "
 "Identifizierung des erweiterten Attributs verwendet wird"
 
 #: extended_attribute.py:63 extended_attribute.py:377
@@ -276,11 +276,19 @@ msgstr "Syntax-Name"
 
 #: extended_attribute.py:128
 msgid ""
-"Name of a python class implementing the univention.admin.syntax Python "
-"interface. \"string\" by default"
+"When values are entered, the UMC performs a syntax check. Apart from "
+"standard syntax definitions (string) and (integer), there are three "
+"possibilities for expressing a binary condition. The syntax TrueFalse "
+"is represented at LDAP level using the strings true and false, the syntax "
+"TrueFalseUppercorresponds to the OpenLDAP boolean values TRUE and FALSE "
+"and the syntax boolean does not save any value or the string 1"
 msgstr ""
-"Name einer Python-Klasse die das univention.admin.syntax Interface "
-"implementiert"
+"Bei der Eingabe von Werten nimmt die UMC eine Syntaxprüfung vor. Neben "
+"Standard-Syntaxdefinitionen für Zeichenketten (string), Zahlen (integer) "
+"gibt es drei Möglichkeiten einen binären Zustand auszudrücken: Die Syntax "
+"TrueFalse wird auf LDAP-Ebene durch die Zeichenketten true und false abgebildet, "
+"die Syntax TrueFalseUpper verwendet dagegen die Werte TRUE und FALSE. Die Syntax "
+"boolean dagegen speichert keinen Wert bzw. die Zeichenkette 1"
 
 #: extended_attribute.py:137
 msgid "Hook class"
@@ -327,10 +335,10 @@ msgstr "Dieses erweiterte Attribut nicht in der UMC anzeigen"
 #: extended_attribute.py:169
 msgid ""
 "The extended attribute is not shown in the UMC. It can only be used from the "
-"commandline programm or the Python interface"
+"UDM CLI or the Python interface"
 msgstr ""
 "Dieses erweiterte Attribut wird nicht in der UMC angezeigt. Es kann dann nur "
-"über das Kommandozeilenprogramm oder das Python-Interface verwendet werden"
+"per UDM-CLI  das Python-Interface verwendet werden"
 
 #: extended_attribute.py:178
 msgid "Tab name"
@@ -374,7 +382,7 @@ msgstr ""
 
 #: extended_attribute.py:208
 msgid "Group ordering number"
-msgstr "Gruppen Ordnungsnummer"
+msgstr "Gruppen-Ordnungsnummer"
 
 #: extended_attribute.py:209
 msgid ""
@@ -410,16 +418,27 @@ msgstr ""
 "eine Karteikarte ersetzt die nur erweiterte Attribute enthält"
 
 #: extended_attribute.py:238
-msgid "Overwrite existing property with this name"
-msgstr "Existierende Eigenschaft mit diesem Namen überschreiben"
+msgid "Overwrite existing widget"
+msgstr "Existierendes Eingabefeld überschreiben"
 
 #: extended_attribute.py:239
 msgid ""
-"The pre-defined property with this name is replaced by this extended "
-"attribute"
+"In some cases it is useful to overwrite predefined input fields with "
+"extended attributes. If the internal UDM name of an attribute is configured "
+"here, its  input field is overwritten by this extended attribute. The UDM "
+"attribute name can only be determined by searching within "
+"/usr/share/pyshared/univention/admin/handlers directory. It is the name which "
+"comes before the colon in the declarations of univention.admin.property objects, "
+"e.g., roomNumber for a  user's room number"
 msgstr ""
-"Die vordefinierte Eigenschaft mit diesem Namen wird durch dieses erweiterte "
-"Attribut ersetzt"
+"In einigen Fällen ist es sinnvoll, vorgegebene Eingabefelder mit erweiterten "
+"Attributen zu überschreiben. Wird hier der interne UDM-Name eines Attributs "
+"konfiguriert, wird dessen Eingabefeld von diesem erweiterten Attribut "
+"überschrieben. Der UDM-Attributname kann nur durch eine Suche unterhalb des "
+"Verzeichnisses /usr/share/pyshared/univention/admin/handlers/ ermittelt "
+"werden. Es handelt sich dabei um den Namen, der in den Deklarationen von"
+"univention.admin.property-Objekten vor dem Doppelpunkt steht, "
+"z.B. roomNumber für die Raumnummer eines Benutzers"
 
 #: extended_attribute.py:248
 msgid "Span both columns"
@@ -437,12 +456,6 @@ msgstr ""
 msgid "LDAP attribute"
 msgstr "LDAP-Attribut"
 
-#: extended_attribute.py:259
-msgid "Name of the LDAP attribute used to store this extended attribute"
-msgstr ""
-"Name des LDAP-Attributs das verwendet wird um dieses erweiterte Attribut zu "
-"speichern"
-
 #: extended_attribute.py:268
 msgid "Editable after creation"
 msgstr "Nachträglich modifizierbar"
@@ -456,16 +469,16 @@ msgstr ""
 "angelegt wurde"
 
 #: extended_attribute.py:278
-msgid "Value not editable through UMC or the command line programm"
-msgstr "Wert nicht durch die UMC oder das Kommandozeilenprogramm änderbar"
+msgid "Value is only managed internally"
+msgstr "Wert wird nur intern verwaltet"
 
 #: extended_attribute.py:279
 msgid ""
-"This extended attribute can not be changed through UMC or the command line "
-"programm, but only through the Python API or by hooks"
+"This extended attribute can not be changed through UMC or UDM CLI, "
+"but only through the Python API or by hooks"
 msgstr ""
-"Dieses erweiterte Attribut kann nicht über die UMC oder das "
-"Kommandozeilenprogramm geändert werden, sondern nur über die Python API und "
+"Dieses erweiterte Attribut kann nicht über die UMC oder "
+"UDM-CLI geändert werden, sondern nur über die Python API und "
 "Hooks"
 
 #: extended_attribute.py:289
@@ -480,15 +493,24 @@ msgstr "Wert ist erforderlich und muss eingegeben werden"
 msgid "LDAP object class"
 msgstr "LDAP-Objektklasse"
 
-#: extended_attribute.py:300
-msgid "Name of the LDAP object class used to store this extended attribute"
+#: extended_attribute.py:259 extended_attribute.py:300
+msgid ""
+"Univention Corporate Server provides its own LDAP scheme for customer "
+"extensions. The LDAP object class univentionFreeAttributes can be used "
+"for extended attributes without restrictions. It offers 20 freely usable "
+"attributes (univentionFreeAttribute1 to univentionFreeAttribute20) and "
+"can be used in connection with any LDAP object (e.g., a user object)"
 msgstr ""
-"Name der LDAP-Objektklasse die verwendet wird um dieses erweiterte Attribut "
-"zu speichern"
+"Univention Corporate Server bringt ein eigenes LDAP-Schema für Kundenerweiterungen mit. Die "
+"LDAP-Objektklasse univentionFreeAttributes kann ohne Einschränkungen "
+"für erweiterte Attribute verwendet werden. Sie bringt 20 frei zu "
+"verwendende Attribute (univentionFreeAttribute1 bis "
+"univentionFreeAttribute20) mit und kann in Verbindung mit jedem beliebigen "
+"LDAP-Objekt (z.B. einem Benutzerobjekt) verwendet werden"
 
 #: extended_attribute.py:309
-msgid "Delete object class when value is unset"
-msgstr "Objektklasse löschen wenn der Wert leer gesetzt wird"
+msgid "Remove object class if the attribute is removed"
+msgstr "Objektklasse löschen, wenn das Attribut entfernt wird"
 
 #: extended_attribute.py:310
 msgid ""
@@ -524,14 +546,14 @@ msgstr "UDM-CLI Name"
 
 #: extended_attribute.py:341
 msgid ""
-"The name for the extended attribute as used by the command line programm"
+"The name for the extended attribute as used by UDM CLI"
 msgstr ""
-"Der von dem Kommandozeilenprogramm zu verwendende Name für dieses erweiterte "
+"Der vom UDM-CLI zu verwendende Name für dieses erweiterte "
 "Attribut"
 
 #: extended_attribute.py:351
-msgid "Enabling options"
-msgstr "Aktivierende Optionen"
+msgid "Required options/object classes"
+msgstr "Benötigte Optionen/Objektklassen"
 
 #: extended_attribute.py:352
 msgid ""
@@ -551,7 +573,7 @@ msgstr "Nach diesem erweiterten Attribut kann nicht gesucht werden"
 
 #: extended_attribute.py:373
 msgid "General settings"
-msgstr "Maileinstellungen"
+msgstr "Allgemeine Einstellungen"
 
 #: extended_attribute.py:381
 msgid "Long Description"
@@ -562,16 +584,16 @@ msgid "Module"
 msgstr "Modul"
 
 #: extended_attribute.py:386
-msgid "Module related settings"
-msgstr "UDM-spezifische Einstellungen"
+msgid "Settings of the modules to be extended"
+msgstr "Einstellungen der zu erweiternden Module"
 
 #: extended_attribute.py:392
 msgid "LDAP mapping"
 msgstr "LDAP-Abbildung"
 
 #: extended_attribute.py:392
-msgid "Mapping to LDAP object class and attribute"
-msgstr "Abbildung auf LDAP-Objektklassen"
+msgid "Configuration of the LDAP settings used to store the extended attribute"
+msgstr "Konfiguration der zur Speicherung des erweiterten Attributs verwendeten LDAP-Einstellungen"
 
 #: extended_attribute.py:396
 msgid "UMC"
