--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.12-1) unstable; urgency=low
+
+  * fixed ldapdelete ... in unjoin script (Bug #32951) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 22 Oct 2013 14:46:01 +0200
+
 univention-virtual-machine-manager-daemon (3.0.11-1) unstable; urgency=low
 
   * Bug #32751: position grid action icons in the center
