univention-apache (6.0.12-2) unstable; urgency=low
  * added trailing "/" to UCS overview ldap master link (Bug #32647)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45437 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.12-2) unstable; urgency=low
+
+  * added trailing "/" to UCS overview ldap master link (Bug #32647)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 15:15:36 +0200
+
 univention-apache (6.0.12-1) unstable; urgency=low
 
   * Preserve additional query parameters when switching language (Bug #32932) 
