--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.46-1) unstable; urgency=low
+
+  * Bug #30629: Reload license directly before checking it
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 22 Oct 2013 15:27:32 +0200
+
 univention-management-console-module-appcenter (3.0.45-1) unstable; urgency=low
 
   * Bug #30629: Switch back to app details after solution button is clicked
