--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.55-1) unstable; urgency=low
+
+  * Bug #32389: use umc.widgets.ConfirmDialog as base class for LiceneDialog
+
+ -- Florian Best <best@univention.de>  Tue, 22 Oct 2013 15:39:35 +0200
+
 univention-management-console-module-udm (4.0.54-1) unstable; urgency=low
 
   * Bug #32389: small adaptions to license import dialog
