Bug #28670: USS: unset and change handling
Unset empty values to forget old interfaces.

Remove change detection on networks, which prevents changing the IP
while staying in the same subnet.

Open LDAP data to resolve all properties before update.

Also initialize univention.debug.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45442 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,12 @@
+univention-system-setup (7.0.51-5) unstable; urgency=low
+
+  * Unset empty values to forget old interfaces (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 13:50:09 +0200
+
 univention-system-setup (7.0.51-4) unstable; urgency=low
 
-  * Remove handling for Package Databse (Bug #29783)
+  * Remove handling for Package Database (Bug #29783)
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 12:33:10 +0200
 
