--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.12-3) unstable; urgency=low
+
+  * prefer https link to ldap master (Bug #32647)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 15:55:58 +0200
+
 univention-apache (6.0.12-2) unstable; urgency=low
 
   * added trailing "/" to UCS overview ldap master link (Bug #32647)
