* Bug #32389: fix default button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45446 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.56-1) unstable; urgency=low
+
+  * Bug #32389: fix default button
+
+ -- Florian Best <best@univention.de>  Tue, 22 Oct 2013 15:57:32 +0200
+
 univention-management-console-module-udm (4.0.55-1) unstable; urgency=low
 
   * Bug #32389: use umc.widgets.ConfirmDialog as base class for LiceneDialog
