--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.150-1) unstable; urgency=low
+
+  * Use a valid ucs version (Bug #32412, Bug #32411)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Oct 2013 16:10:31 +0200
+
 ucs-test (4.0.149-1) unstable; urgency=low
 
   * lib/computer.sh: use role=${2:-windows} in computer_dn and
