univention-nagios (7.0.3-2) unstable; urgency=low
  * call unjoin script when removing, not puring (Bug #32453)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45448 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.3-2) unstable; urgency=low
+
+  * call unjoin script when removing, not puring (Bug #32453)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 16:19:58 +0200
+
 univention-nagios (7.0.3-1) unstable; urgency=low
 
   * adapted unjoin script for univention-nagios-server (Bug #32453)
