--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,6 +1,12 @@
+univention-nagios (7.0.3-3) unstable; urgency=low
+
+  * version bump for changelog fix (Bug #32453)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 16:24:27 +0200
+
 univention-nagios (7.0.3-2) unstable; urgency=low
 
-  * call unjoin script when removing, not puring (Bug #32453)
+  * call unjoin script when removing, not purging (Bug #32453)
 
  -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 16:19:58 +0200
 
