Bug #28670: USS: Detect more interface changes
One more change to handle in-subnet IP address changes.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45453 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.51-6) unstable; urgency=low
+
+  * Detect more interface changes (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 16:24:45 +0200
+
 univention-system-setup (7.0.51-5) unstable; urgency=low
 
   * Unset empty values to forget old interfaces (Bug #28670)
