--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.29-1) unstable; urgency=low
+
+  * Fix samba reload (Bug #31698)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 22 Oct 2013 16:30:21 +0200
+
 univention-samba4 (3.0.28-2) unstable; urgency=low
 
   * Fixed bash typo in 98univention-samba4-dns.inst (Bug #32871)
