--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.7-4) unstable; urgency=low
+
+  * call unjoin script when removing, not purging (Bug #32454)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 16:56:50 +0200
+
 univention-mail-postfix (8.0.7-3) unstable; urgency=low
 
   * Update UCR variable descriptions (Bug #32444, Bug #28124)
