univention-directory-manager-modules (9.0.69-1) unstable; urgency=low
  * add reconnect to getBaseDN (Bug #32617)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45459 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.69-1) unstable; urgency=low
+
+  * add reconnect to getBaseDN (Bug #32617)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 22 Oct 2013 17:08:45 +0200
+
 univention-directory-manager-modules (9.0.68-1) unstable; urgency=low
 
   * revised settings/extended_attribute descriptions again (Bug #28629)
