* Bug #29119: Fixed translation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45460 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.52-1) unstable; urgency=low
+
+  * Bug #29119: Fixed translation
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 22 Oct 2013 17:12:45 +0200
+
 univention-system-setup (7.0.51-7) unstable; urgency=low
 
   * Detect more interface changes (Bug #28670)
@@ -69,7 +75,7 @@ univention-system-setup (7.0.46-1) unstable; urgency=low
 univention-system-setup (7.0.45-1) unstable; urgency=low
 
   * Bug #30816: fix label
-  * Bug #29119: add link to UCS documenation
+  * Bug #29119: add link to UCS documentation
 
  -- Florian Best <best@univention.de>  Tue, 01 Oct 2013 15:43:45 +0200
 
