univention-nagios (7.0.4-1) unstable; urgency=low
  * fixed typo in univention-nagios-server unjoin script (Bug #32453)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45461 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.4-1) unstable; urgency=low
+
+  * fixed typo in univention-nagios-server unjoin script (Bug #32453)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 22 Oct 2013 17:24:26 +0200
+
 univention-nagios (7.0.3-3) unstable; urgency=low
 
   * version bump for changelog fix (Bug #32453)
