--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.53-1) unstable; urgency=low
+
+  * Handle more LDAP error cases (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 17:43:09 +0200
+
 univention-system-setup (7.0.52-1) unstable; urgency=low
 
   * Bug #29119: Fixed translation
