* Also set univentionObjectFlag via ldapmodify. It is possible that   the objectFlag is unknown during the upgrade (Bug #29000)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45477 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.31-1) unstable; urgency=low
+
+  * Also set univentionObjectFlag via ldapmodify. It is possible that
+    the objectFlag is unknown during the upgrade (Bug #29000)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Oct 2013 07:28:49 +0200
+
 univention-samba4 (3.0.30-1) unstable; urgency=low
 
   * Update existing pseudo groups with new flags (Bug #29000)
