* Bug #32850: adapt UMC ACL test
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45480 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.152-1) unstable; urgency=low
+
+  * Bug #32850: adapt UMC ACL test
+
+ -- Florian Best <best@univention.de>  Wed, 23 Oct 2013 08:57:48 +0200
+
 ucs-test (4.0.151-2) unstable; urgency=low
 
   * Fix ftbfs (Bug #32554)
