--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (7.0.2-1) unstable; urgency=low
+
+  * Bug #28191: merged UEFI specific code from ucs-3.1/component/uefi/univention-grub
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 16 Oct 2013 11:01:37 +0200
+
 univention-grub (7.0.1-2) unstable; urgency=low
 
   * Bug #32634: switch color depth automatically from 788 (800x600x16) to
