--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.153-1) unstable; urgency=low
+
+  * Bug #32554: fixed traceback in udm_extensions.py
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Oct 2013 09:10:34 +0200
+
 ucs-test (4.0.152-1) unstable; urgency=low
 
   * Bug #32850: adapt UMC ACL test
