--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.28-2) unstable; urgency=low
+
+  * Bug #28672: install univention-uefi-secureboot if UEFI has been detected/chosen
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Oct 2013 09:21:46 +0200
+
 univention-installer (9.0.28-1) unstable; urgency=low
 
   * Bug #32634: add UEFI graphic modules
