* Modify share directory permissions, owner and group only if their defining udm attributes have been modified (Bug #15087)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45490 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.23-1) unstable; urgency=low
+
+  * Modify share directory permissions, owner and group only if
+    their defining udm attributes have been modified (Bug #15087)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Oct 2013 09:41:21 +0200
+
 univention-lib (3.0.22-1) unstable; urgency=low
 
   * Added update_nss_group_cache () for updating the group cache
