--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.13-1) unstable; urgency=low
+
+  * Bug #32751: fix searching for nodes
+
+ -- Florian Best <best@univention.de>  Wed, 23 Oct 2013 09:48:44 +0200
+
 univention-virtual-machine-manager-daemon (3.0.12-1) unstable; urgency=low
 
   * fixed ldapdelete ... in unjoin script (Bug #32951) 
