--- a/base/univention-uefi/debian/changelog
+++ b/base/univention-uefi/debian/changelog
@@ -1,3 +1,9 @@
+univention-uefi (1.0.0-2) unstable; urgency=low
+
+  * Bug #28191: fixed typo in dependency
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Oct 2013 09:49:47 +0200
+
 univention-uefi (1.0.0-1) unstable; urgency=low
 
   * Initial release
