--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.54-1) unstable; urgency=low
+
+  * Bug #32949: enhance usability when deleting interfaces
+
+ -- Florian Best <best@univention.de>  Wed, 23 Oct 2013 10:47:36 +0200
+
 univention-system-setup (7.0.53-1) unstable; urgency=low
 
   * Handle more LDAP error cases (Bug #28670)
