* UnixAccessRightsExtended widget: Remove setuid-bit option (Bug #15708)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45497 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.117-1) unstable; urgency=low
+
+  * UnixAccessRightsExtended widget: Remove setuid-bit option (Bug #15708)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Oct 2013 10:57:30 +0200
+
 univention-management-console-frontend (3.0.116-2) unstable; urgency=low
 
   * Bug #32168: Refactor context menu of gallery pane to avoid issues with
