--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.12-4) unstable; urgency=low
+
+  * also create new languages UCRVs when updating (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 23 Oct 2013 11:14:19 +0200
+
 univention-apache (6.0.12-3) unstable; urgency=low
 
   * prefer https link to ldap master (Bug #32647)
