* Improve startsite.js javascript code (Bug #32932)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.12-5) unstable; urgency=low
+
+  * Improve startsite.js javascript code (Bug #32932) 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Oct 2013 11:25:43 +0200
+
 univention-apache (6.0.12-4) unstable; urgency=low
 
   * also create new languages UCRVs when updating (Bug #32678)
