--- a/management/univention-directory-manager-modules/modules/univention/admin/handlers/shares/de.po
+++ b/management/univention-directory-manager-modules/modules/univention/admin/handlers/shares/de.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-admin-modules\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-16 13:10+0200\n"
+"POT-Creation-Date: 2013-10-22 15:58+0200\n"
 "PO-Revision-Date: 2011-09-21 20:05+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -235,8 +235,8 @@ msgid "Export for Samba clients"
 msgstr "Für Samba-Clients exportieren"
 
 #: share.py:74
-msgid "Export for NFS clients"
-msgstr "Für NFS-Clients exportieren"
+msgid "Export for NFS clients (NFSv3 and NFSv4)"
+msgstr "Für NFS-Clients exportieren (NFSv3 und NFSv4)"
 
 #: share.py:82
 msgid "Name of the share"
@@ -274,8 +274,7 @@ msgstr "Besitzer des Wurzelverzeichnisses der Freigabe. Vorgabe ist root."
 
 #: share.py:135
 msgid "Directory owner group of the share's root directory"
-msgstr ""
-"Benutzergruppe für das Wurzelverzeichnis der Freigabe. Vorgabe ist root."
+msgstr "Benutzergruppe für das Wurzelverzeichnis der Freigabe."
 
 #: share.py:136
 msgid ""
@@ -326,16 +325,16 @@ msgstr ""
 "umbenannten Dateien verursachen.)"
 
 #: share.py:191
-msgid "Redirect root access uid"
-msgstr "Uid bei Root-Zugriff umlenken"
+msgid "Modify user ID for root user (root squashing)"
+msgstr "User-ID für Root-Benutzer ändern (Root-Squashing)"
 
 #: share.py:192
 msgid "Redirect root user access to a non-privileged uid."
 msgstr "Zugriff auf eine nicht privilegierte uid Kennung umlenken."
 
 #: share.py:202
-msgid "Allowed hosts, ip addresses or networks"
-msgstr "Erlaubte Hosts, IP-Adressen oder Netze"
+msgid "Only allow access for these hosts, IP addresses or networks"
+msgstr "Zugriff nur für diese Rechner, IP-Adressen oder Netze erlauben"
 
 #: share.py:203
 msgid ""
@@ -370,8 +369,8 @@ msgid ""
 msgstr "Freigabe wird in der Windows-Netzwerkumgebung angezeigt"
 
 #: share.py:245
-msgid "Allow anonymous access with a guest user"
-msgstr "Anonymen Zugriff mit Gastbenutzer erlauben"
+msgid "Allow anonymous read-only access with a guest user"
+msgstr "Anonymen Nur-Lese-Zugriff mit Gastbenutzer erlauben"
 
 #: share.py:246
 msgid "Allow guest access"
@@ -594,17 +593,25 @@ msgstr "Strict Locking"
 
 #: share.py:397
 msgid ""
-"This is a boolean that controls the handling of file locking in the server. "
-"When this is set to yes, the server will check every read and write access "
-"for file locks, and deny access if locks exist. This can be slow on some "
-"systems. When strict locking is disabled, the server performs file lock "
-"checks only when the client explicitly asks for them."
+"This value controls the handling of file locking in the server. If strict "
+"locking is set to Auto (the default), the server performs file lock checks "
+"only on non-oplocked files. As most Windows redirectors perform file locking "
+"checks locally on oplocked files this is a good trade-off for improved "
+"performance. If set to yes, the server will check every read and write "
+"access for file locks, and deny access if locks exist. This can be slow on "
+"some systems. If strict locking is disabled, the server performs file lock "
+"checks only if the client explicitly asks for them."
 msgstr ""
 "Dieser Schalter bestimmt die Überprüfung von Datei-Locking bei "
-"Schreibzugriffen. Ist Strict Locking aktiv, werden bei allen Zugriffen die "
-"existierenden Locks überprüft, und der Zugriff unterbunden, wenn Locks "
-"existieren. Dies kann auf einigen Systemen langsam sein. Wenn Strict Locking "
-"deaktiviert ist, findet die Überprüfung nur auf Anfrage des Clients statt."
+"Schreibzugriffen. Wenn Strict Locking auf 'Auto' (Standardwert) gesetzt ist, "
+"führt der Server Datei-Locking überprüfungen nur für Dateien durch, die "
+"keinen Oplock besitzen. Da die meisten Windows Redirectoren für Dateizugriff "
+"Locking-Überprüfungen lokal bei Dateien mit Oplock durchführen, ist 'Auto' "
+"ein guter Kompromiss zur Verbesserung der Performance. Ist Strict Locking "
+"aktiv, werden bei allen Zugriffen die existierenden Locks überprüft, und der "
+"Zugriff unterbunden, wenn Locks existieren. Dies kann auf einigen Systemen "
+"langsam sein. Wenn Strict Locking deaktiviert ist, findet die Überprüfung "
+"nur auf Anfrage des Clients statt."
 
 #: share.py:407
 msgid "Oplocks"
@@ -621,10 +628,10 @@ msgid ""
 "by default in Windows NT Servers)."
 msgstr ""
 "Dieser Schalter sagt Samba, ob Oplocks (opportunistic locks) gegen Datei-"
-"Öffnungsanfragen für diese Freigabe ausgestellt werden sollen. Der Opplock-"
+"Öffnungsanfragen für diese Freigabe ausgestellt werden sollen. Der Oplock-"
 "Code kann den Zugriff auf Dateien auf Samba-Servern dramatisch (etwa "
 "30% oder mehr) beschleunigen. Dies erlaubt den Clients Dateien massiv lokal "
-"zwischen zu speichern und es ist ratsam dise Option in unzuverlässigen "
+"zwischen zu speichern und es ist ratsam diese Option in unzuverlässigen "
 "Netzen zu deaktivieren. (Sie ist auf Windows NT Servern standardmäßig "
 "aktiviert)"
 
@@ -705,7 +712,7 @@ msgstr ""
 
 #: share.py:441
 msgid "Block size"
-msgstr "Block Größe"
+msgstr "Blockgröße"
 
 #: share.py:451
 msgid "Client-side caching policy"
@@ -719,12 +726,12 @@ msgstr ""
 "Bestimmt das Verfahren, mit dem Clients Dateiinhalte lokal zwischenspeichern."
 
 #: share.py:462
-msgid "Allowed hosts"
-msgstr "Zugelassene Rechner"
+msgid "Allowed hosts/networks"
+msgstr "Zugelassene Rechner/Netze"
 
 #: share.py:472
-msgid "Denied hosts"
-msgstr "Nicht zugelassene Rechner"
+msgid "Denied hosts/networks"
+msgstr "Nicht zugelassene Rechner/Netze"
 
 #: share.py:482
 msgid "Valid users or groups"
@@ -832,8 +839,8 @@ msgstr ""
 "ausgeführt. Die üblichen Platzhalter werden ersetzt."
 
 #: share.py:574
-msgid "Users with write access"
-msgstr "Liste von Schreibberechtigten"
+msgid "Restrict write access to these users/groups"
+msgstr "Schreibberechtigung auf diese Benutzer/Gruppen beschränken"
 
 #: share.py:584
 msgid "VFS objects"
@@ -848,12 +855,18 @@ msgid "MSDFS root"
 msgstr "MSDFS-Wurzel"
 
 #: share.py:595
-msgid "Export share as MSDFS root"
-msgstr "Freigabe als MSDFS-Wurzel freigeben"
+msgid ""
+"Export share as MSDFS root. Please consult the \"Fileshare management\" "
+"chapter in the manual for more information"
+msgstr ""
+"Freigabe als MSDFS-Wurzel freigeben. Bitte beachten Sie das Kapitel "
+"\"Freigaben-Verwaltung\" in der Dokumenation für mehr Informationen"
 
 #: share.py:605
-msgid "Inherit owner"
-msgstr "Besitzer erben"
+msgid "Create files/directories with the owner of the parent directory"
+msgstr ""
+"Neue Dateien und Verzeichnisse erhalten den Besitzer des übergeordneten "
+"Verzeichnisses."
 
 #: share.py:606
 msgid ""
@@ -864,8 +877,10 @@ msgstr ""
 "Verzeichnisses."
 
 #: share.py:616
-msgid "Inherit permissions"
-msgstr "Rechte erben"
+msgid "Create files/directories with permissions of the parent directory"
+msgstr ""
+"Neue Dateien und Verzeichnisse erhalten die Zugriffsrechte des "
+"übergeordneten Verzeichnisses."
 
 #: share.py:617
 msgid "New files and directories inherit the mode of the parent directory."
@@ -877,17 +892,13 @@ msgstr ""
 msgid "Custom Samba share settings"
 msgstr "Erweiterte Einstellungen für Samba-Freigaben"
 
-#: share.py:628
-msgid "Set new custom Samba share settings"
-msgstr "Setzen von erweiterten Samba-Einstellungen im Key-Value-Format"
+#: share.py:628 share.py:638
+msgid "Set new custom share settings"
+msgstr "Setzen von erweiterten Freigabe-Einstellungen"
 
 #: share.py:637
 msgid "Custom NFS share settings"
-msgstr "Erweiterte NFS Einstellungen für Freigaben"
-
-#: share.py:638
-msgid "Set new custom NFS share settings"
-msgstr "Setzen von erweiterten NFS Einstellungen"
+msgstr "Erweiterte NFS-Einstellungen für Freigaben"
 
 #: share.py:657 share.py:658
 msgid "NFS"
@@ -913,69 +924,87 @@ msgstr "Samba-Rechte"
 msgid "Samba permission settings"
 msgstr "Samba-Zugriffsrechte"
 
-#: share.py:686 share.py:687
+#: share.py:687 share.py:688
 msgid "Samba extended permissions"
 msgstr "Erweiterte Samba-Rechte"
 
-#: share.py:686
+#: share.py:687
 msgid "Samba extended permission settings"
 msgstr "Samba erweiterte Zugriffsrechte"
 
-#: share.py:694 share.py:695
+#: share.py:695 share.py:696
 msgid "Samba options"
 msgstr "Samba-Optionen"
 
-#: share.py:705 share.py:706
+#: share.py:706 share.py:707
 msgid "Samba custom settings"
 msgstr "Erweiterte Samba-Einstellungen"
 
-#: share.py:705
+#: share.py:706
 msgid "Custom settings for Samba shares"
 msgstr "Erweiterte Einstellungen für Samba-Freigaben"
 
-#: share.py:713 share.py:714
+#: share.py:711 share.py:712
 msgid "NFS custom settings"
-msgstr "Erweiterte NFS Einstellungen"
+msgstr "Erweiterte NFS-Einstellungen"
 
-#: share.py:713
+#: share.py:711
 msgid "Custom settings for NFS shares"
 msgstr "Erweiterte Einstellungen für NFS-Freigaben"
 
-#: share.py:873
+#: share.py:871
 #, python-format
 msgid "It is not valid to set %s as a share."
 msgstr "Es ist nicht erlaubt, %s als Freigabe einzutragen"
 
-#: share.py:930
+#: share.py:928
 msgid "uses"
 msgstr "benutzt"
 
-#: share.py:931
+#: share.py:929
 msgid "user"
 msgstr "Benutzer"
 
-#: share.py:933
+#: share.py:931
 msgid "users"
 msgstr "Benutzer"
 
-#: share.py:934
+#: share.py:932
 msgid "use"
 msgstr "nutzt"
 
-#: share.py:938
+#: share.py:936
 #, python-format
 msgid " and %s more"
 msgstr "und %s mehr"
 
-#: share.py:949
+#: share.py:947
 #, python-format
 msgid "The %s %s%s %s this share as home share!"
 msgstr "Die/Der %s %s%s %s diese Freigabe als Heimatverzeichnisfreigabe"
 
-#: share.py:954
+#: share.py:952
 #, python-format
 msgid "%s (%s on %s)"
 msgstr "%s (%s auf %s)"
+
+#~ msgid "Inherit owner"
+#~ msgstr "Besitzer erben"
+
+#~ msgid "Inherit permissions"
+#~ msgstr "Rechte erben"
+
+#~ msgid "Users with write access"
+#~ msgstr "Liste von Schreibberechtigten"
+
+#~ msgid "Export share as MSDFS root"
+#~ msgstr "Freigabe als MSDFS-Wurzel freigeben"
+
+#~ msgid "Redirect root access uid"
+#~ msgstr "Uid bei Root-Zugriff umlenken"
+
+#~ msgid "Set new custom Samba share settings"
+#~ msgstr "Setzen von erweiterten Samba-Einstellungen im Key-Value-Format"
 
 #~ msgid "Directory owner"
 #~ msgstr "Verzeichnis-Besitzer"
