* Bug #32389: recenter Licence Dialog after loading license information
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45508 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.58-1) unstable; urgency=low
+
+  * Bug #32389: recenter Licence Dialog after loading license information
+
+ -- Florian Best <best@univention.de>  Wed, 23 Oct 2013 13:19:04 +0200
+
 univention-management-console-module-udm (4.0.57-1) unstable; urgency=low
 
   * Bug #23214: Revert changes from previous approach, set UCR variable
