* Bug #30004: added new system notifications, refactored some CSS code into correct files, moved LoginDialog into umc/dialog/, added login messages into login Form
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45515 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (3.0.118-1) unstable; urgency=low
+
+  * Bug #30004: added new system notifications, refactored some CSS code into
+    correct files, moved LoginDialog into umc/dialog/, added login messages
+    into login Form
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 14:29:17 +0200
+
 univention-management-console-frontend (3.0.117-1) unstable; urgency=low
 
   * UnixAccessRightsExtended widget: Remove setuid-bit option (Bug #15708)
