--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.119-1) unstable; urgency=low
+
+  * Bug #30004: adjusted mouseover/click/touch behaviour of the notifications,
+    added missing translations
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 15:05:25 +0200
+
 univention-management-console-frontend (3.0.118-1) unstable; urgency=low
 
   * Bug #30004: added new system notifications, refactored some CSS code into
