univention-apache (6.0.12-6) unstable; urgency=low
  * localised LDAP master link in ucs-overview (Bug #32647)
  * corrected legacy UCRV unset behaviour of postinst (Bug #32678)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45521 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (6.0.12-6) unstable; urgency=low
+
+  * localised LDAP master link in ucs-overview (Bug #32647)
+  * corrected legacy UCRV unset behaviour of postinst (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 23 Oct 2013 15:20:59 +0200
+
 univention-apache (6.0.12-5) unstable; urgency=low
 
   * Improve startsite.js javascript code (Bug #32932) 
