--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.9-1) unstable; urgency=low
+
+  * Bug #30004: adjusted handling of notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 15:44:51 +0200
+
 univention-ad-connector (8.0.8-1) unstable; urgency=low
 
   * Bug #32698: fix download link to private.key and cert.pem
