* Bug #30004: adjustements for new notifications
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45527 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-top/debian/changelog
+++ b/management/univention-management-console-module-top/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-top (3.0.2-1) unstable; urgency=low
+
+  * Bug #30004: adjustements for new notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 15:52:02 +0200
+
 univention-management-console-module-top (3.0.1-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
