* Bug #30004: adjustements for new notifications, make sure changes on interfaces are only shown once
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45538 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.55-1) unstable; urgency=low
+
+  * Bug #30004: adjustements for new notifications, make sure changes on
+    interfaces are only shown once
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 17:16:19 +0200
+
 univention-system-setup (7.0.54-1) unstable; urgency=low
 
   * Bug #32949: enhance usability when deleting interfaces
