--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.14-1) unstable; urgency=low
+
+  * Bug #30004: adjustements for new notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 17:24:16 +0200
+
 univention-virtual-machine-manager-daemon (3.0.13-1) unstable; urgency=low
 
   * Bug #32751: fix searching for nodes
