* Bug #30004: fixed scope handling for notifications
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45541 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.10-1) unstable; urgency=low
+
+  * Bug #30004: fixed scope handling for notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 17:27:37 +0200
+
 univention-ad-connector (8.0.9-1) unstable; urgency=low
 
   * Bug #30004: adjusted handling of notifications
