* Bug #30004: clean up old notification handling in Page, minor CSS fix, add property 'standingBy' to StandbyMixin (for Basic settings module)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45542 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.122-1) unstable; urgency=low
+
+  * Bug #30004: clean up old notification handling in Page, minor CSS fix,
+    add property 'standingBy' to StandbyMixin (for Basic settings module)
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 17:31:38 +0200
+
 univention-management-console-frontend (3.0.121-1) unstable; urgency=low
 
   * Bug #30004: adjustements for new notifications
