* Bug #32972: imported new version of put-selector
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45544 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-dojo/debian/changelog
+++ b/management/univention-dojo/debian/changelog
@@ -1,3 +1,9 @@
+univention-dojo (7.0.6-1) unstable; urgency=low
+
+  * Bug #32972: imported new version of put-selector
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 18:36:58 +0200
+
 univention-dojo (7.0.5-1) unstable; urgency=low
 
   * Bug #32264: rename patch
