--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.123-1) unstable; urgency=low
+
+  * Bug #30004: removed comments, changed console.log() to console.warn(),
+    fixed time representation in notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Oct 2013 18:37:45 +0200
+
 univention-management-console-frontend (3.0.122-1) unstable; urgency=low
 
   * Bug #30004: clean up old notification handling in Page, minor CSS fix,
