* Bug #32930: Make attributes to be searched for in LiveSearchSidebar configurable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45547 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.124-1) unstable; urgency=low
+
+  * Bug #32930: Make attributes to be searched for in LiveSearchSidebar
+    configurable
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 23 Oct 2013 22:15:27 +0200
+
 univention-management-console-frontend (3.0.123-1) unstable; urgency=low
 
   * Bug #30004: removed comments, changed console.log() to console.warn(),
