* Bug #32930: Also search in LongDescription
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45548 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.47-1) unstable; urgency=low
+
+  * Bug #32930: Also search in LongDescription
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 23 Oct 2013 22:20:09 +0200
+
 univention-management-console-module-appcenter (3.0.46-1) unstable; urgency=low
 
   * Bug #30629: Reload license directly before checking it
