--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.28-1) unstable; urgency=low
+
+  * Extend group ignorelist on upgrade (Bug #29000)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 24 Oct 2013 07:44:44 +0200
+
 univention-s4-connector (8.0.27-1) unstable; urgency=low
 
   * Always log filename for rejects (Bug #32262)
